5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1807_2569.log
== TEST (2019-06-09 22:01:11) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range size(v):
	d = (v[i] - m)**2
	v[i] = v[i] + 1
d = sum(v) / size(v) - 1
d = sqrt(d)
print(d)
	
-- ERROR:
File "XXXX", line 6
    for i in range size(v):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:01:38) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = (v[i] - m)**2
	v[i] = v[i] + 1
d = sum(v) / size(v) - 1
d = sqrt(d)
print(d)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:02:40) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sum(v) / size(v) - 1
d = sqrt(d)
print(d)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:03:17) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sqrt(sum(v) / size(v) - 1)
print(d)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:05:47) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sqrt(sum(v) / size(v) - 1)
print(round(d,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:08:13) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sqrt(sum(v) / (size(v) - 1)
print(round(d,3))
	
-- ERROR:
File "XXXX", line 9
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:08:35) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sqrt(sum(v) / (size(v) - 1))
print(round(d,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:09:30) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sqrt(sum(v) / size(v) - 1)
print(round(d,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:09:51) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sqrt(sum(v) / (size(v) - 1))
print(round(d,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 22:10:53) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sqrt(sum(v) / (size(v) - 1))
print(round(d,3))
	
-- EXECUTION TIME:
1.14212
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:12:24) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sum(v) / (size(v) - 1)
d = sqrt(d)
print(round(d,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 22:12:38) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sum(v) / (size(v) - 1)
d = sqrt(d)
print(round(d,3))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 22:12:49) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("Insira os valores: ")))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	v[i] = (v[i] - m)**2
d = sum(v) / (size(v) - 1)
d = sqrt(d)
print(round(d,3))

	
-- EXECUTION TIME:
1.1379
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 22:15:34) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
m = sum(x) / size(x)
d = 0
for i in range(size(x)):
	x[i] = (x[i] - m)**2
d = sum(x) / (size(x) - 1)
d = sqrt(d)
print(round(d,3))

	
-- EXECUTION TIME:
1.05806
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:05:07) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
m = sum(x) / size(x)
d = 0
for i in range(size(x)):
	x[i] = (x[i] - m)**2
d = (x[i]) / (size(x) - 1)
d = sqrt(d)
print(round(d,3))

	
-- EXECUTION TIME:
0.916203
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
22.699
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
13.179
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.122
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:07:23) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
m = sum(x) / size(x)
d = 0
for i in range(size(x)):
	d = d + (x[i] - m)**2
d = (d / (size(x) - 1)
d = sqrt(d)
print(round(d,3))

	
-- ERROR:
File "XXXX", line 9
    d = sqrt(d)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:14:45) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
m = sum(x) / size(x)
d = 0
for i in range(size(x)):
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1)
print(round(d,3))

	
-- ERROR:
File "XXXX", line 8
    d = sqrt(d / (size(x) - 1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:15:00) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1)
print(round(d,3))

	
-- ERROR:
File "XXXX", line 7
    d = sqrt(d / (size(x) - 1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:25:09) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1)
print(round(d,3))

	
-- EXECUTION TIME:
0.5492
-- ERROR:
  File "/home/codebench/codes/1807/2569/main.py", line 7
    d = sqrt(d / (size(x) - 1)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:25:10) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1)
print(round(d,3))

	
-- ERROR:
File "XXXX", line 7
    d = sqrt(d / (size(x) - 1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:25:23) 
-- CODE:
gbtyhb 

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    gbtyhb 
NameError: name 'gbtyhb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:25:38) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1)
print(round(d,3))

	
-- ERROR:
File "XXXX", line 7
    d = sqrt(d / (size(x) - 1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:26:12) 
-- CODE:
from numpy import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	from math import *
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1)
print(round(d,3))

	
-- ERROR:
File "XXXX", line 7
    d = sqrt(d / (size(x) - 1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:26:32) 
-- CODE:
from numpy import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	from math import *
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1))
print(round(d,3))

	
-- ERROR:
File "XXXX", line 7
    d = sqrt(d / (size(x) - 1))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:29:04) 
-- CODE:
from numpy import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	from math import *
	d = d + (x[i] - (sum(x)/size(x))**2
	
print(round(d,3))

	
-- ERROR:
File "XXXX", line 8
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:29:21) 
-- CODE:
from numpy import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	from math import *
	d = d + (x[i] - (sum(x)/size(x))**2
	


	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:29:41) 
-- CODE:
from numpy import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	from math import *
	d = d + (x[i] - (sum(x)/size(x))**2
	d = sqrt(d / (size(x) - 1))
				
print(round(d,3))


	
-- ERROR:
File "XXXX", line 7
    d = sqrt(d / (size(x) - 1))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:30:43) 
-- CODE:
from numpy import *
x = array(eval(input("Insira os valores: ")))
d = 0
for i in range(size(x)):
	from math import *
	d = sqrt(d + (x[i] - (sum(x)/size(x))**2 / (size(x) - 1))
				
print(round(d,3))


	
-- ERROR:
File "XXXX", line 8
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:31:22) 
-- CODE:
v = 1 + 1
print(v)


	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:31:35) 
-- CODE:
v = 1 + 1
print(v)


	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:20) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
d = 0
for i in range(size(vet)):
	d = x[i] - (sum(v) / size(v))**2
	d = sqrt(d / (sum(v) / size(v)-1))
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:53) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
d = 0
for i in range(size(v)):
	d = x[i] - (sum(v) / size(v))**2
	d = sqrt(d / (sum(v) / size(v)-1))
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:06) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
d = 0
for i in range(size(v)):
	d = v[i] - (sum(v) / size(v))**2
	d = sqrt(d / (sum(v) / size(v)-1))
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:37) 
-- CODE:
from numpy import * 

v = array(eval(input('Digite: ')))
d = 0
for i in range(size(v)):
	from math import *
	d = v[i] - (sum(v) / size(v))**2
	d = sqrt(d / (sum(v) / size(v)-1))
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:37:37) 
-- CODE:
from numpy import * 
v = array(eval(input('Digite: ')))
d = 0
for i in range(size(v)):
	from math import *
	d = v[i] - (sum(v) / size(v))**2
	d = d / (sum(v) / size(v)-1)
	d = sqrt(d)
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:40:31) 
-- CODE:
from math import *
from numpy import * 
v = array(eval(input('Digite: ')))
d = 0
for i in range(size(v)):
	d = v[i] - (sum(v) / size(v))**2
	d = d / (sum(v) / size(v)-1)
	d = sqrt(d)
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:45) 
-- CODE:
from numpy import * 
v = array(eval(input('Digite: ')))
d = 0
for i in range(size(v)):
	d = v[i] - (sum(v) / size(v))**2
	d = d / (sum(v) / size(v)-1)
	from math import *
	d = sqrt(d)
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:56:26) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = (v[i] - m)**2
	d = sqrt(d / m -1)
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:06:10) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = (v[i] - m)**2
	d = sqrt(d / m -1)
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:06:46) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = (v[i] - m)**2
	print(d/m-1)
	d = sqrt(d / m -1)
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:08:21) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = (v[i] - m)**2
	d = sqrt(d / (m -1))
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:11:55) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = d + (v[i] - m)**2
d = sqrt(d / (m -1))
print(round(d,3))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:13:50) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = d + (v[i] - m)**2
d = sqrt(d / (size(v) -1))
print(round(d,3))


	
-- EXECUTION TIME:
1.2094
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
Digite: 0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:14:15) 
-- CODE:
from numpy import * 
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = d + (v[i] - m)**2
d = sqrt(d / (size(v) -1))
print(round(d,3))


	
-- EXECUTION TIME:
0.878963
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:17:40) 
-- CODE:
from numpy import * 
v = array(eval(input('Digite: ')))
m = sum(v) / size(v)
d = 0
for i in range(size(v)):
	d = d + (v[i] - m)**2
d = sqrt(d / (size(v) -1))
print(round(d,3))


	
-- EXECUTION TIME:
1.12137
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
